@@ -1,4 +1,4 @@
-dnl CF_LIB_RULES version: 75 updated: 2014/09/20 20:16:32
+dnl CF_LIB_RULES version: 76 updated: 2014/12/20 19:16:08
 dnl ------------
 dnl Append definitions and rules for the given models to the subdirectory
 dnl Makefiles, and the recursion rule for the top-level Makefile.  If the
@@ -50,6 +50,20 @@ do
 
 		SHARED_LIB=
 		Libs_To_Make=
+
+		if test -n "${cf_cv_abi_version}" && test "x${cf_cv_abi_version}" != "x5"
+		then
+			cat >>$cf_dir/Makefile <<CF_EOF
+
+# Generated by CF_LIB_RULES
+resulting.map: $UNALTERED_SYMS
+	sed -e "s/NCURSES_/NCURSES${cf_cv_abi_version}_/g" < $UNALTERED_SYMS >\[$]@
+
+clean::
+	rm -f resulting.map
+CF_EOF
+		fi
+
 		for cf_item in $cf_LIST_MODELS
 		do
 			CF_LIB_SUFFIX($cf_item,cf_suffix,cf_depsuf)
